evaluación de maestros y grados terminada. Enviada a revisión

--- a/saitae-web/src/main/webapp/pages/gradoEval.xhtml
+++ b/saitae-web/src/main/webapp/pages/gradoEval.xhtml
@@ -54,10 +54,10 @@
                         </p:column>
                     </p:dataTable>
                     <p:contextMenu for="evalg">
-                        <p:menuitem value="Mostrat" icon="fa fa-edit"                                    
+                        <p:menuitem value="Mostrar" icon="fa fa-edit"                                    
                                     update="h0" oncomplete="PF('Deval').show();"
                                     resetValues="true"/>
-                        <p:menuitem value="eliminar" icon="fa fa-delete"                                    
+                        <p:menuitem value="eliminar" icon="fa fa-trash" 
                                     update="h0 form" actionListener="#{gradoEvalController.eliminarEva()}"
                                     resetValues="true"/>
                     </p:contextMenu>
