--- a/saitae-web/src/main/webapp/pages/matricula.xhtml
+++ b/saitae-web/src/main/webapp/pages/matricula.xhtml
@@ -4,7 +4,8 @@
                 template="./../WEB-INF/template/plantilla1.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:f="http://xmlns.jcp.org/jsf/core">
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns="http://www.w3.org/1999/xhtml">
 
     <ui:define name="content">
         <h:form id="form1" style="margin: 0 auto; width: 80%;">
@@ -14,17 +15,17 @@
                         <h:panelGrid columns="1">
                             <h:panelGrid columns="2">
                                 <p:outputLabel for="box" value="Seleccione Modalidad"/>
-                                <p:selectOneMenu id="box" dynamic="true"  converter="omnifaces.SelectItemsConverter"
+                                <p:selectOneMenu id="box" converter="omnifaces.SelectItemsConverter"
                                                  value="#{matriculaController.selectedPK}">
-                                    <f:selectItem itemLabel="Seleccione" itemValue="#{null}"/>
+                                    <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
                                     <f:selectItems value="#{matriculaController.grados}" var="g"
-                                                   itemLabel="#{matriculaController.getGradosLabel(g.gradoPK)}"
+                                                   itemLabel="#{matriculaController.getGradoNombre(g.gradoPK)}"
                                                    itemValue="#{g.gradoPK}"/>
                                     <p:ajax event="itemSelect" listener="#{matriculaController.selectAño}" 
-                                            update="tw"/>
+                                            update="tw:ia tw:imd"/>
                                 </p:selectOneMenu>
                             </h:panelGrid>
-                            <p:panel header="Información de los aspirantes">
+                            <p:panel id="ia" header="Información de los aspirantes">
                                 <h:panelGrid columns="2" cellspacing="15">
                                     <p:outputLabel value="Número de Aspirantes: "/>
                                     <p:outputLabel value="#{matriculaController.nuevasMatriculasF.size()+matriculaController.nuevasMatriculasM.size()}" />
@@ -36,7 +37,7 @@
                                     <p:outputLabel value="#{matriculaController.nuevasMatriculasM.size()}" />
                                 </h:panelGrid>
                             </p:panel>
-                            <p:panel header="Información de la matrícula disponible">
+                            <p:panel id="imd" header="Información de la matrícula disponible">
                                 <h:panelGrid columns="2" cellspacing="15">
                                     <p:outputLabel value="Número de Secciones Disponibles: "/>
                                     <p:outputLabel value="#{matriculaController.secciones.size()}" />
@@ -53,8 +54,8 @@
                                     <p:column/>
                                     <p:commandButton id="summit" value="Proceder con la Matrícula automática" 
                                                      actionListener="#{matriculaController.guardar()}" 
-                                                     disabled="#{!matriculaController.btnGuardar}"
-                                                     update="tw box summit :form0:msgs form1"/>
+                                                     disabled="#{!matriculaController.btnGuardar}" process="@this"
+                                                     update="tw:ia tw:imd box summit :form0:msgs"/>
                                 </h:panelGrid>
                             </p:panel>
                         </h:panelGrid>
@@ -76,7 +77,7 @@
                             <h:outputText id="ape" value="#{matriculaController.buscado.personaApellido}"/>
                             
                             <p:outputLabel for="console5" value="Modalidad de bachillerato a la que aplica: " />
-                            <p:selectOneMenu id="console5" value="#{matriculaController.seccion.gradoModalidad}"  
+                            <p:selectOneMenu id="console5" value="#{matriculaController.seccion.gradoModalidad}"
                                              required="true"
                                              style="width:190px" title="Seleccione la modalidad de bachillerato" 
                                              disabled="false">
