Corrección de errores menores. enviado a revisión.

--- a/saitae-web/src/main/webapp/pages/cvista.xhtml
+++ b/saitae-web/src/main/webapp/pages/cvista.xhtml
@@ -123,7 +123,7 @@
                             <div class="ui-g">
                                 <div class="ui-g-12">
                                     <p:commandButton value="+" styleClass="ui-priority-primary" 
-                                                     process="@this" update=":form0:msgs"
+                                                     process="@this" update=":form0:msgs tipo"
                                                      action="#{vistasMenuController.onAddNew('tipo')}" 
                                                      oncomplete="PF('acceso').addRow();"
                                                      title="Agregar nueva Zona."/>
