Corrección de errores menores. enviado a revisión.

--- a/saitae-web/src/main/webapp/pages/solicitudR.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudR.xhtml
@@ -276,7 +276,7 @@
                             <p:column style="width:35px">
                                 <p:rowEditor />
                             </p:column>
-                        </p:dataTable>">
+                        </p:dataTable>
                         <p:commandButton value="+" styleClass="ui-priority-primary" 
                                          process="@this"
                                          action="#{reservaSController.onAddNew('art')}" 
