--- a/saitae-web/src/main/webapp/pages/maestroEval.xhtml
+++ b/saitae-web/src/main/webapp/pages/maestroEval.xhtml
@@ -61,7 +61,7 @@
             </h:panelGrid>
         </h:form>
 
-        <p:dialog modal="true" widgetVar="Deval" closeOnEscape="true">
+        <p:dialog modal="true" widgetVar="Deval" closeOnEscape="true" blockScroll="true">
             <h:form id="h0"> 
                 <t:evMaestro editar="false" 
                              evMaestro="#{maestroEvalController.evMaSelected}"/>
