modificación de la nómina de alumnos. enviado a revisión.

--- a/saitae-web/src/main/webapp/pages/nominaA.xhtml
+++ b/saitae-web/src/main/webapp/pages/nominaA.xhtml
@@ -213,7 +213,7 @@
 
                                 <p:outputLabel value="¿Repite año?: " />
                                 <p:selectBooleanButton value="#{nominaAController.mat.matriculaRepite}" disabled="true"
-                                                       onLabel="Sí" offLabel="No" style="width:190px"/>
+                                                       onLabel="Sí" offLabel="No"/>
 
                                 <p:outputLabel value="¿Cursó parvularia?: " />
                                 <p:selectBooleanButton value="#{nominaAController.selected.estudianteParvularia}" 
